# bot-with-plan

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment-autotrain.yml  environment.yml  evaluate.ipynb  example.ipynb  example_agent.ipynb  example_agent_finetuned.ipynb  example_agent_finetuned_search_tools.ipynb  example_agent_zeroshot.ipynb  example_docs.py  example_funcs.py  example_json.ipynb  example_math.ipynb  example_tools.py  internet_search.ipynb  json_mode.ipynb  planner_evaluation.ipynb  planner_finetuned.ipynb  planner_zeroshot.ipynb  pyproject.toml  requirements.txt  tasks.py
.searxng/: settings.yml
docs/: calculate_completion.txt  calculate_prompt.txt  function_call_completion.txt  function_call_prompt.txt  planner_completion.txt  planner_prompt.txt  response_completion.txt  response_prompt.txt  summarizer_completion.txt  summarizer_prompt.txt  trajectory.json
gba/: agent.py  chat.py  llm.py  math.py  search.py  store.py  summary.py  tool.py  utils.py
gba/client/: __init__.py  base.py  chat.py  grammar.py  llamacpp.py  openai.py
gba/data/: README.md
gba/planner/: __init__.py  base.py  fine_tuned.py  zero_shot.py
gba/tools/: __init__.py  ask.py  base.py  calc.py  calculate.py  functions.py  respond.py
simulation/: README.md  agent.py  planner.py
simulation/data/: evaluation.py  package.py  trajectory.py  upload.py
simulation/tools/: __init__.py  ask_user.py  base.py  calculate_number.py  create_event.py  final_answer.py  (+4 more)
tests/: conftest.py  response_assert_test.py  search_test.py  store_test.py
train/: README.md
(+30 files in other folders)
